--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="./target/web/public/main/lib/bootstrap/css/bootstrap.min.css">
+    <style>
+        /* just to be sure these are full screen*/
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+
+        /* To remove the scrollbars */
+        canvas {
+            display:block;
+        }
+    </style>
 </head>
 <body>
 
