--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="./target/web/public/main/lib/bootstrap/css/bootstrap.min.css">
+
     <style>
         /* just to be sure these are full screen*/
         html, body {
@@ -15,15 +16,34 @@
             height: 100%;
         }
 
+        body {
+            padding-top: 70px;
+        }
+
         /* To remove the scrollbars */
         canvas {
-            display:block;
+            display: block;
         }
     </style>
 </head>
 <body>
 
-<canvas id="canvas"></canvas>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Conway's game of scala</a>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="row">
+        <canvas id="canvas"></canvas>
+    </div>
+</div>
+
+<script src="./target/web/public/main/lib/jquery/jquery.min.js"></script>
+<script src="./target/web/public/main/lib/bootstrap/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="./target/scala-2.11/web-fastopt.js"></script>
 <script type="text/javascript" src="./target/scala-2.11/web-launcher.js"></script>
