added display for world age

--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,7 @@
                 </label>
             </div>
             <button id="resetButton" type="button" class="btn btn-default navbar-btn btn-danger">Reset</button>
+            <p id="statusText" class="navbar-text navbar-right"></p>
         </div>
     </div>
 </nav>
